--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,8 @@ asyncssh==2.21.0
 atpublic==6.0.1
 attrs==25.3.0
 billiard==4.2.1
+blis==1.3.0
+catalogue==2.0.10
 celery==5.5.3
 certifi==2025.8.3
 cffi==2.0.0
@@ -18,9 +20,12 @@ click==8.2.1
 click-didyoumean==0.3.1
 click-plugins==1.1.1.2
 click-repl==0.3.0
+cloudpathlib==0.22.0
 colorama==0.4.6
+confection==0.1.5
 configobj==5.0.9
 cryptography==45.0.7
+cymem==2.0.11
 dictdiffer==0.9.0
 diskcache==5.6.3
 distro==1.9.0
@@ -33,6 +38,7 @@ dvc-objects==5.1.1
 dvc-render==1.0.2
 dvc-studio-client==0.22.0
 dvc-task==0.40.2
+emoji==2.14.1
 entrypoints==0.4
 filelock==3.19.1
 flatten-dict==0.4.2
@@ -47,19 +53,31 @@ gto==1.8.0
 hydra-core==1.3.2
 idna==3.10
 iterative-telemetry==0.0.10
+Jinja2==3.1.6
+joblib==1.5.2
 kombu==5.5.4
+langcodes==3.5.0
+language_data==1.3.0
+marisa-trie==1.3.1
 markdown-it-py==4.0.0
+MarkupSafe==3.0.2
 mdurl==0.1.2
 multidict==6.6.4
+murmurhash==1.0.13
 networkx==3.5
+nltk==3.9.1
+numpy==2.3.3
 omegaconf==2.3.0
 orjson==3.11.3
 packaging==25.0
+pandas==2.3.2
 pathspec==0.12.1
 platformdirs==4.4.0
+preshed==3.0.10
 prompt_toolkit==3.0.52
 propcache==0.3.2
 psutil==7.0.0
+pyarrow==21.0.0
 pycparser==2.23
 pydantic==2.11.7
 pydantic_core==2.33.2
@@ -69,7 +87,9 @@ Pygments==2.19.2
 pygtrie==2.5.0
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
+pytz==2025.2
 PyYAML==6.0.2
+regex==2025.9.1
 requests==2.32.5
 rich==14.1.0
 ruamel.yaml==0.18.15
@@ -81,9 +101,15 @@ shellingham==1.5.4
 shortuuid==1.0.13
 shtab==1.7.2
 six==1.17.0
+smart_open==7.3.1
 smmap==5.0.2
+spacy==3.8.7
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
 sqltrie==0.11.2
+srsly==2.5.1
 tabulate==0.9.0
+thinc==8.3.6
 tomlkit==0.13.3
 tqdm==4.67.1
 typer==0.17.4
@@ -93,6 +119,9 @@ tzdata==2025.2
 urllib3==2.5.0
 vine==5.1.0
 voluptuous==0.15.2
+wasabi==1.1.3
 wcwidth==0.2.13
+weasel==0.4.1
+wrapt==1.17.3
 yarl==1.20.1
 zc.lockfile==3.0.post1
